# opentarget_het_graph

./: .gitignore  LICENSE  README.md  croissant.json  debug_edge_times.py  debug_rerun_nodes.py  evaluate_advancement.py  evaluate_explanation_fidelity.py  evaluate_target_discovery_standalone.py  fuse_biobridge_paths.py  pagelink_explain.py  pyproject.toml  run_pagelink_biobridge.sh
THBKG/: poster_v1_20260421.tex  reference.bib  thbkg_20260420.tex
config/: benchmark_config.yaml  edge_schema.yaml  event_graph_config.yaml  node_schema.yaml  progression_config.yaml  static_edge_schema.yaml
data/: cold_start_diseases.csv
docs/: graph_summary.md  parser_summary.md
note/: explain_fidelity.md  explain_pagelink.md  methodology_provenance_review.md
scripts/: 01_collect_edges.sh  02_collect_node_features.sh  add_advancement_edges.py  add_graph_indices_to_csv.py  assemble_graph.sh  assembling_graph_04.sh  build_and_test_graph.py  build_nct_terminal_dates.sh  build_tft_dataset_05.sh  building_event_graph_02.sh  casestudy_temporal_evidence.py  collecting_edges_01.sh  collecting_node_features_03.sh  diagnose_centering.py  diagnose_collapse.py  diagnose_molecule_ablation.py  download.sh  inspect_graph_mappings.py  inspect_parquets.sh  run_build.sh  run_build_disease_embeddings.sh  run_build_event_graph.sh  run_build_progression_graph.sh  run_disease_description_to_vector.sh  run_finetune_event_hgt.sh  run_finetune_static_gatv2.sh  run_finetune_static_gatv3.sh  run_finetune_static_hgt.sh  run_kg_clinical_only.sh  run_kg_clinical_only_23.06.sh  run_pipeline.sh  run_train.sh  (+9 more)
(+1075 files in other folders)
